adding new futures

--- a/backend/config.env
+++ b/backend/config.env
@@ -7,4 +7,4 @@ NODE_ENV=development;
 # DB_USER=Elsadany
 # DB_NAME=Ecommarce-db
 
-DATABASE_URL=mongodb+srv://Elsadany:le27eyH2hOupbTkd@cluster0.xyr64.mongodb.net/Ecommarce-db
+DATABASE_URL=mongodb+srv://Elsadany:le27eyH2hOupbTkd@cluster0.xyr64.mongodb.net/Ecommarce-db;
