--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "slug": "^5.3.0",
+    "slugify": "^1.6.5"
   }
 }
